update contact html and projects
update

--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manasa Maddi: Personal site and portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Manasa Maddi: Personal site and portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Manasa Maddi</h1>
-    <p>
-        Hi! I’m Manasa Maddi, a Data Science major at UC San Diego passionate about using technology to make a real-world impact. 
+
+  <nav>
+    <a href="index.html">Home</a> |
+    <a href="projects/index.html">Projects</a> |
+    <a href="contact/index.html">Contact</a> |
+    <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
+  </nav>
+
+  <h1 style="text-align: center;">Manasa Maddi</h1>
+
+  <div style="text-align: center;">
+    <img src="images/personalphoto.jpg" alt="Photo of Manasa Maddi smiling in a casual outdoor setting" width="700">
+  </div>
+
+  <p style="text-align: center;">
+    Hi! I’m Manasa Maddi, a Data Science major at UC San Diego passionate about using technology to make a real-world impact. 
         From building AI-driven waste sorters to analyzing global power outages and designing STEM education programs for underserved students, 
-        I love solving problems that blend data, creativity, and purpose. I’ve co-founded a nonprofit, led robotics outreach to over 500 students, 
-        and published a crash course that’s helped thousands learn robotics and programming. I'm currently diving deeper into predictive analytics, 
+        I love solving problems that blend data, creativity, and purpose. I have co-founded a nonprofit, led robotics outreach to over 500 students, 
+        and published a crash course thats helped thousands learn robotics and programming. I'm currently diving deeper into predictive analytics, 
         machine learning, and HCI research—and I'm always excited to collaborate on meaningful, people-centered projects.
-    </p>
+  </p>
+
 </body>
 </html>
+
