--- a/cv/index.html
+++ b/cv/index.html
@@ -13,7 +13,7 @@
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
-    <a href="cv/index.html">Resume</a> |
+    <a href="index.html">Resume</a> |
     <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank">GitHub</a>
   </nav>
 
