--- a/contact/index.html
+++ b/contact/index.html
@@ -13,6 +13,7 @@
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
     <a href="index.html">Contact</a> |
+    <a href="../cv/index.html">Resume</a> |
     <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
   </nav>
 
