--- a/projects/index.html
+++ b/projects/index.html
@@ -12,6 +12,7 @@
     <a href="../index.html">Home</a> |
     <a href="index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
+    <a href="../cv/index.html">Resume</a> |
     <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
   </nav>
 
