--- a/cv/index.html
+++ b/cv/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-  <h1>Manasa Maddi – Resume</h1>
+ 
 
   <nav>
     <a href="../index.html">Home</a> |
@@ -15,7 +15,9 @@
     <a href="../contact/index.html">Contact</a> |
     <a href="index.html">Resume</a> |
     <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank">GitHub</a>
+
   </nav>
+  <h1>Resume</h1>
 
   <section>
     <h2>Education</h2>
