--- a/cv/index.html
+++ b/cv/index.html
@@ -14,7 +14,7 @@
     <a href="../projects/index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
     <a href="index.html">Resume</a> |
-    <a href="https://github.com/YOUR_GITHUB_USERNAME" target="_blank">GitHub</a>
+    <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
 
   </nav>
   <h1>Resume</h1>
