--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <nav>
-    <a href="index.html">Home</a> |
-    <a href="projects/index.html">Projects</a> |
-    <a href="contact/index.html">Contact</a> |
-    <a href="cv/index.html">Resume</a> |
-    <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
+    <ul>
+      <li><a href="index.html" class="current">Home</a></li>
+      <li><a href="projects/index.html">Projects</a></li>
+      <li><a href="contact/index.html">Contact</a></li>
+      <li><a href="cv/index.html">Resume</a></li>
+      <li><a href="https://github.com/manasamaddi1" target="_blank">GitHub</a></li>
+    </ul>
   </nav>
+  
 
   <h1 style="text-align: center;">Manasa Maddi</h1>
 
