--- a/contact/index.html
+++ b/contact/index.html
@@ -12,7 +12,7 @@
   <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
-    <a href="index.html">Contact</a> |
+    <a href="index.html" class="current">Contact</a> |
     <a href="../cv/index.html">Resume</a> |
     <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
   </nav>
