--- a/index.html
+++ b/index.html
@@ -6,16 +6,15 @@
   <title>Manasa Maddi: Personal site and portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <nav>
-    <ul>
-      <li><a href="index.html" class="current">Home</a></li>
-      <li><a href="projects/index.html">Projects</a></li>
-      <li><a href="contact/index.html">Contact</a></li>
-      <li><a href="cv/index.html">Resume</a></li>
-      <li><a href="https://github.com/manasamaddi1" target="_blank">GitHub</a></li>
-    </ul>
-  </nav>
+<nav>
+  <a href="../index.html"class="current">Home</a>
+  <a href="../projects/index.html">Projects</a>
+  <a href="index.html" >Contact</a>
+  <a href="../cv/index.html" >Resume</a>
+  <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
+</nav>
+
+  
   
 
   <h1 style="text-align: center;">Manasa Maddi</h1>
