--- a/contact/index.html
+++ b/contact/index.html
@@ -16,28 +16,20 @@
     <a href="../cv/index.html">Resume</a> |
     <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
   </nav>
-  <h1>Contact</h1>
+  <h1>Contact me</h1>
 
   <form action="mailto:lmaddi@ucsd.edu" method="POST" enctype="text/plain">
-    <label>
-      Email:
-      <input name="email" type="email" required />
-    </label>
-    <br /><br />
-
-    <label>
-      Subject:
-      <input name="subject" required />
-    </label>
-    <br /><br />
-
-    <label>
-      Body:
-      <textarea name="body" rows="5" cols="30" required></textarea>
-    </label>
-    <br /><br />
-
-    <button>Send</button>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email">
+  
+    <label for="subject">Subject:</label>
+    <input type="text" id="subject" name="subject">
+  
+    <label for="message">Message:</label>
+    <textarea id="message" name="message"></textarea>
+  
+    <button type="submit">Send</button>
   </form>
+  
 </body>
 </html>
