--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav>
   <a href="../index.html"class="current">Home</a>
   <a href="../projects/index.html">Projects</a>
-  <a href="index.html" >Contact</a>
+  <a href="../contact/index.html" >Contact</a>
   <a href="../cv/index.html" >Resume</a>
   <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
 </nav>
