--- a/projects/index.html
+++ b/projects/index.html
@@ -17,7 +17,68 @@
   </nav>
 
   <h1>Projects</h1>
-  <p>Here are some of the data science and outreach projects I’ve worked on.</p>
+  <div class="projects">
+    <article>
+      <h2>Lorem ipsum dolor sit.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor veritatis molestias excepturi neque sapiente ipsam, sunt libero quidem rem quasi itaque ratione sint impedit saepe, tempora perspiciatis voluptas. Ipsa, eaque?</p>
+    </article>
+    <article>
+      <h2>Quos voluptate ut necessitatibus.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Pariatur a laudantium perspiciatis impedit totam similique adipisci voluptate aliquid incidunt facilis dolor necessitatibus quaerat vero dignissimos praesentium dolore, veniam cumque libero deserunt, assumenda corporis! Officia quisquam sed fuga non.</p>
+    </article>
+    <article>
+      <h2>Ex blanditiis voluptatem eligendi.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Neque quaerat magnam atque maiores quo modi ducimus voluptatem velit laborum illo explicabo, ad nam reiciendis cum sint. Animi, doloribus velit. Vero eaque quis dolore sint hic, perspiciatis magni dolores.</p>
+    </article>
+    <article>
+      <h2>Velit maxime eos officiis!</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Exercitationem explicabo repudiandae fugit unde, iure veritatis quia delectus rem, eaque asperiores magni a qui modi commodi distinctio labore corrupti? Recusandae blanditiis, magni dicta cumque in possimus saepe esse asperiores.</p>
+    </article>
+    <article>
+      <h2>Aliquam quasi incidunt laborum?</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Voluptas dolorem id omnis, inventore optio laudantium architecto labore dolore ex quidem? Officia, totam possimus. Facere ipsa dolor corrupti optio laboriosam, veritatis eligendi a ipsam modi minus dolorem cumque aperiam?</p>
+    </article>
+    <article>
+      <h2>Explicabo dolorem vero labore!</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Eius aspernatur accusamus consectetur quidem maiores obcaecati provident similique reprehenderit quae cum illo consequuntur nemo dolorem repellendus, et aperiam odio iste quia facilis fugit excepturi. Possimus assumenda maxime laborum distinctio?</p>
+    </article>
+    <article>
+      <h2>Recusandae culpa accusamus repellendus?</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Aut facilis possimus consequuntur placeat facere? Perspiciatis possimus reprehenderit aliquid eaque minima nemo sit nulla blanditiis illo, doloribus similique illum, quae repellendus impedit minus non quos officia ipsam vitae! Nemo?</p>
+    </article>
+    <article>
+      <h2>Laudantium doloremque modi cum.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Neque dolorum modi nisi optio at est et quasi provident dignissimos dolor nesciunt voluptatem harum tenetur reprehenderit, totam omnis, nostrum minus ea error, ducimus voluptate. Iusto quasi quaerat atque qui.</p>
+    </article>
+    <article>
+      <h2>Quis ullam facilis officia?</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Non vero ipsa provident voluptatum quidem atque consectetur iste suscipit reprehenderit laboriosam ab nobis ipsam mollitia tenetur numquam, pariatur reiciendis eius optio? Unde dolore molestias incidunt soluta, dolor commodi repudiandae.</p>
+    </article>
+    <article>
+      <h2>Dicta eum ipsum adipisci.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Eius asperiores modi, nam voluptatum mollitia fugiat dignissimos nostrum, reiciendis dolorem porro quam vel aliquam id perspiciatis est. Culpa accusantium officia pariatur iure recusandae autem suscipit cum doloremque omnis delectus.</p>
+    </article>
+    <article>
+      <h2>Doloribus expedita nostrum incidunt.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Blanditiis, voluptates maiores, itaque odio ad cupiditate optio quisquam sint adipisci officiis praesentium! Beatae eius non quisquam similique! Neque eius error illum velit sit pariatur hic. Repudiandae maxime eum quam.</p>
+    </article>
+    <article>
+      <h2>Animi iure illum excepturi.</h2>
+      <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
+      <p>Nam hic incidunt, quasi voluptatibus accusamus placeat consequatur! Aliquam voluptatem sint deserunt ab enim hic, laboriosam fugit magni repellat aperiam veritatis quod magnam provident dignissimos expedita pariatur maxime molestias rem.</p>
+    </article>
+  </div>
 
 </body>
 </html>
