--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <nav>
-  <a href="../index.html"class="current">Home</a>
+  <a href="index.html"class="current">Home</a>
   <a href="../projects/index.html">Projects</a>
   <a href="../contact/index.html" >Contact</a>
   <a href="../cv/index.html" >Resume</a>
