--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <nav>
   <a href="index.html"class="current">Home</a>
-  <a href="../projects/index.html">Projects</a>
-  <a href="../contact/index.html" >Contact</a>
-  <a href="../cv/index.html" >Resume</a>
+  <a href="projects/index.html">Projects</a>
+  <a href="contact/index.html" >Contact</a>
+  <a href="cv/index.html" >Resume</a>
   <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
 </nav>
 
