--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <nav>
-  <a href="index.html"class="current">Home</a>
-  <a href="projects/index.html">Projects</a>
-  <a href="contact/index.html" >Contact</a>
-  <a href="cv/index.html" >Resume</a>
+  <a href="portfolio/index.html"class="current">Home</a>
+  <a href="portfolio/projects/index.html">Projects</a>
+  <a href="portfolio/contact/index.html" >Contact</a>
+  <a href="portfolio/cv/index.html" >Resume</a>
   <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
 </nav>
 
