--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <nav>
   <a href="portfolio/index.html"class="current">Home</a>
-  <a href="portfolio/projects/index.html">Projects</a>
+  <a href="projects/index.html">Projects</a>
   <a href="portfolio/contact/index.html" >Contact</a>
   <a href="portfolio/cv/index.html" >Resume</a>
   <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
