--- a/cv/index.html
+++ b/cv/index.html
@@ -77,5 +77,8 @@
       <p>Predicted outage durations using environmental and infrastructure data. Applied regression models, statistical testing, and geographic analysis with interactive Plotly visuals.</p>
     </article>
   </section>
+
+  <script type="module" src="../global.js"></script>
+  
 </body>
 </html>
