--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         machine learning, and HCI research—and I'm always excited to collaborate on meaningful, people-centered projects.
   </p>
 
+  <script type="module" src="global.js"></script>
+
 </body>
 </html>
 
