--- a/contact/index.html
+++ b/contact/index.html
@@ -30,6 +30,8 @@
   
     <button type="submit">Send</button>
   </form>
+
+  <script type="module" src="../global.js"></script>
   
 </body>
 </html>
