--- a/contact/index.html
+++ b/contact/index.html
@@ -9,13 +9,15 @@
 <body>
   
 
-  <nav>
+  <!-- <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
-    <a href="index.html" class="current">Contact</a> |
+    <a href="index.html">Contact</a> |
     <a href="../cv/index.html">Resume</a> |
     <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
-  </nav>
+  </nav> -->
+
+
   <h1>Contact me</h1>
 
   <form action="mailto:lmaddi@ucsd.edu" method="POST" enctype="text/plain">
