--- a/cv/index.html
+++ b/cv/index.html
@@ -9,14 +9,16 @@
 <body>
  
 
-  <nav>
+  <!-- <nav>
     <a href="../index.html">Home</a> |
     <a href="../projects/index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
-    <a href="index.html" class="current">Resume</a> |
+    <a href="index.html">Resume</a> |
     <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
 
-  </nav>
+  </nav> -->
+
+
   <h1>Resume</h1>
 
   <section>
@@ -79,6 +81,6 @@
   </section>
 
   <script type="module" src="../global.js"></script>
-  
+
 </body>
 </html>
