--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <title>Manasa Maddi: Personal site and portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<nav>
-  <a href="index.html"class="current">Home</a>
+
+<!-- <nav>
+  <a href="index.html">Home</a>
   <a href="projects/index.html">Projects</a>
   <a href="contact/index.html" >Contact</a>
   <a href="cv/index.html" >Resume</a>
   <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
-</nav>
+</nav> -->
 
   
   
