--- a/projects/index.html
+++ b/projects/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 
-  <nav>
+  <!-- <nav>
     <a href="../index.html">Home</a> |
-    <a href="index.html" class="current">Projects</a> |
+    <a href="index.html">Projects</a> |
     <a href="../contact/index.html">Contact</a> |
     <a href="../cv/index.html">Resume</a> |
     <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
-  </nav>
+  </nav> -->
 
   <h1>Projects</h1>
   <div class="projects">
