--- a/contact/index.html
+++ b/contact/index.html
@@ -20,18 +20,16 @@
 
   <h1>Contact me</h1>
 
-  <form action="mailto:lmaddi@ucsd.edu" method="POST" enctype="text/plain">
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email">
-  
+  <form action="mailto:lmaddi@ucsd.edu">
     <label for="subject">Subject:</label>
-    <input type="text" id="subject" name="subject">
+    <input type="text" id="subject" name="subject" required>
   
     <label for="message">Message:</label>
-    <textarea id="message" name="message"></textarea>
+    <textarea id="message" name="body" required></textarea>
   
     <button type="submit">Send</button>
   </form>
+  
 
   <script type="module" src="../global.js"></script>
   
