--- a/contact/index.html
+++ b/contact/index.html
@@ -7,31 +7,20 @@
   <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-  
-
-  <!-- <nav>
-    <a href="../index.html">Home</a> |
-    <a href="../projects/index.html">Projects</a> |
-    <a href="index.html">Contact</a> |
-    <a href="../cv/index.html">Resume</a> |
-    <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
-  </nav> -->
-
 
   <h1>Contact me</h1>
 
-  <form action="mailto:lmaddi@ucsd.edu">
+  <form action="mailto:lmaddi@ucsd.edu" method="GET">
     <label for="subject">Subject:</label>
     <input type="text" id="subject" name="subject" required>
-  
+
     <label for="message">Message:</label>
     <textarea id="message" name="body" required></textarea>
-  
+
     <button type="submit">Send</button>
   </form>
-  
 
   <script type="module" src="../global.js"></script>
-  
+
 </body>
 </html>
