--- a/contact/index.html
+++ b/contact/index.html
@@ -7,20 +7,18 @@
   <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-
   <h1>Contact me</h1>
 
-  <form action="mailto:lmaddi@ucsd.edu" method="GET">
+  <form id="contact-form">
     <label for="subject">Subject:</label>
     <input type="text" id="subject" name="subject" required>
 
     <label for="message">Message:</label>
-    <textarea id="message" name="body" required></textarea>
+    <textarea id="message" name="message" required></textarea>
 
     <button type="submit">Send</button>
   </form>
 
   <script type="module" src="../global.js"></script>
-
 </body>
 </html>
