--- a/contact/index.html
+++ b/contact/index.html
@@ -9,7 +9,8 @@
 <body>
   <h1>Contact me</h1>
 
-  <form id="contact-form">
+  <form id="contact-form" action="mailto:lmaddi@ucsd.edu" enctype="text/plain" method="post">
+
     <label for="subject">Subject:</label>
     <input type="text" id="subject" name="subject" required>
 
