--- a/projects/index.html
+++ b/projects/index.html
@@ -17,6 +17,7 @@
   </nav> -->
 
   <h1>Projects</h1>
+  <div class="projects"></div>
   <div class="projects">
     <article>
       <h2>Lorem ipsum dolor sit.</h2>
@@ -81,6 +82,8 @@
   </div>
 
   <script type="module" src="../global.js"></script>
+
+  <script type="module" src="projects.js"></script>
 
 </body>
 </html>
