--- a/index.html
+++ b/index.html
@@ -6,17 +6,15 @@
   <title>Manasa Maddi: Personal site and portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
+<body>
 
-<!-- <nav>
-  <a href="index.html">Home</a>
-  <a href="projects/index.html">Projects</a>
-  <a href="contact/index.html" >Contact</a>
-  <a href="cv/index.html" >Resume</a>
-  <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
-</nav> -->
-
-  
-  
+  <!-- <nav>
+    <a href="index.html">Home</a>
+    <a href="projects/index.html">Projects</a>
+    <a href="contact/index.html">Contact</a>
+    <a href="cv/index.html">Resume</a>
+    <a href="https://github.com/manasamaddi1" target="_blank">GitHub</a>
+  </nav> -->
 
   <h1 style="text-align: center;">Manasa Maddi</h1>
 
@@ -26,14 +24,16 @@
 
   <p style="text-align: center;">
     Hi! I’m Manasa Maddi, a Data Science major at UC San Diego passionate about using technology to make a real-world impact. 
-        From building AI-driven waste sorters to analyzing global power outages and designing STEM education programs for underserved students, 
-        I love solving problems that blend data, creativity, and purpose. I have co-founded a nonprofit, led robotics outreach to over 500 students, 
-        and published a crash course thats helped thousands learn robotics and programming. I'm currently diving deeper into predictive analytics, 
-        machine learning, and HCI research—and I'm always excited to collaborate on meaningful, people-centered projects.
+    From building AI-driven waste sorters to analyzing global power outages and designing STEM education programs for underserved students, 
+    I love solving problems that blend data, creativity, and purpose. I have co-founded a nonprofit, led robotics outreach to over 500 students, 
+    and published a crash course thats helped thousands learn robotics and programming. I'm currently diving deeper into predictive analytics, 
+    machine learning, and HCI research—and I'm always excited to collaborate on meaningful, people-centered projects.
   </p>
 
+  <div class="projects"></div>
+
   <script type="module" src="global.js"></script>
+  <script type="module" src="index.js"></script>
 
 </body>
 </html>
-
