--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <title>Manasa Maddi: Personal site and portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
+  <!-- Navigation -->
   <!-- <nav>
     <a href="index.html">Home</a>
     <a href="projects/index.html">Projects</a>
@@ -26,14 +28,16 @@
     Hi! I’m Manasa Maddi, a Data Science major at UC San Diego passionate about using technology to make a real-world impact. 
     From building AI-driven waste sorters to analyzing global power outages and designing STEM education programs for underserved students, 
     I love solving problems that blend data, creativity, and purpose. I have co-founded a nonprofit, led robotics outreach to over 500 students, 
-    and published a crash course thats helped thousands learn robotics and programming. I'm currently diving deeper into predictive analytics, 
+    and published a crash course that's helped thousands learn robotics and programming. I'm currently diving deeper into predictive analytics, 
     machine learning, and HCI research—and I'm always excited to collaborate on meaningful, people-centered projects.
   </p>
 
-  <div class="projects"></div>
+  <h2>Latest Projects</h2>
+  <div class="projects">
+  </div>
 
   <script type="module" src="global.js"></script>
-  <script type="module" src="index.js"></script>
+  <script type="module" src="index.js" defer></script>
 
 </body>
 </html>
