--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
   <div class="projects">
   </div>
 
+  <h2>My GitHub Stats</h2>
+<div id="profile-stats">
+  <!-- GitHub stats will be populated here dynamically -->
+</div>
+
   <script type="module" src="global.js"></script>
   <script type="module" src="index.js" defer></script>
 
