--- a/projects/index.html
+++ b/projects/index.html
@@ -5,10 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects - Manasa Maddi</title>
   <link rel="stylesheet" href="../style.css" />
+
+  
 </head>
 <body>
 
   <h1 class="projects-title">Projects</h1>
+
+  <!-- Clean SVG element without any <path> inside -->
+  <svg id="projects-pie-plot" viewBox="0 0 100 100"></svg>
 
   <div class="projects"></div>
 
