--- a/projects/index.html
+++ b/projects/index.html
@@ -14,6 +14,7 @@
 
   <!-- Clean SVG element without any <path> inside -->
   <svg id="projects-pie-plot" viewBox="0 0 100 100"></svg>
+  <ul class="legend"></ul>
 
   <div class="projects"></div>
 
