--- a/projects/index.html
+++ b/projects/index.html
@@ -13,8 +13,11 @@
   <h1 class="projects-title">Projects</h1>
 
   <!-- Clean SVG element without any <path> inside -->
-  <svg id="projects-pie-plot" viewBox="0 0 100 100"></svg>
-  <ul class="legend"></ul>
+    <div class="container">
+      <svg id="projects-pie-plot" viewBox="0 0 100 100"></svg>
+      <ul class="legend"></ul>
+    </div>
+    
 
   <div class="projects"></div>
 
