--- a/projects/index.html
+++ b/projects/index.html
@@ -17,6 +17,14 @@
       <svg id="projects-pie-plot" viewBox="0 0 100 100"></svg>
       <ul class="legend"></ul>
     </div>
+
+    <input
+  class="searchBar"
+  type="search"
+  aria-label="Search projects"
+  placeholder="🔍 Search projects…"
+/>
+
     
 
   <div class="projects"></div>
