--- a/meta/index.html
+++ b/meta/index.html
@@ -13,6 +13,8 @@
   <div id="stats"></div>
   <h2>Commits by time of day</h2>
 <div id="chart"></div>
+<p id="selection-count">No commits selected</p>
+<dl id="language-breakdown" class="stats"></dl>
 
 
 <dl id="commit-tooltip" class="info tooltip" hidden>
@@ -30,6 +32,8 @@
 
   <dt>Lines Edited</dt>
   <dd id="commit-lines"></dd>
+
+
 </dl>
 
 
