--- a/meta/index.html
+++ b/meta/index.html
@@ -10,36 +10,44 @@
 <body>
   <h1>Meta</h1>
   <p>This page includes stats about the code of this website.</p>
+
   <div id="stats"></div>
+
   <h2>Commits by time of day</h2>
-<div id="chart"></div>
-<p id="selection-count">No commits selected</p>
-<dl id="language-breakdown" class="stats"></dl>
 
+  <!-- Slider and selected time display -->
+  <div id="commit-filter" style="display: flex; align-items: baseline; gap: 1rem;">
+    <label for="commitSlider">Show commits until:</label>
+    <input type="range" id="commitSlider" min="0" max="100" value="100" />
+    <time id="selectedTime" style="margin-left: auto;"></time>
+  </div>
 
-<dl id="commit-tooltip" class="info tooltip" hidden>
-  <dt>Commit</dt>
-  <dd><a href="" id="commit-link" target="_blank"></a></dd>
+  <!-- File breakdown section -->
+  <dl class="files"></dl>
 
-  <dt>Date</dt>
-  <dd id="commit-date"></dd>
+  <!-- Chart section -->
+  <div id="chart"></div>
+  <p id="selection-count">No commits selected</p>
+  <dl id="language-breakdown" class="stats"></dl>
 
-  <dt>Time</dt>
-  <dd id="commit-time"></dd>
+  <!-- Commit tooltip -->
+  <dl id="commit-tooltip" class="info tooltip" hidden>
+    <dt>Commit</dt>
+    <dd><a href="" id="commit-link" target="_blank"></a></dd>
 
-  <dt>Author</dt>
-  <dd id="commit-author"></dd>
+    <dt>Date</dt>
+    <dd id="commit-date"></dd>
 
-  <dt>Lines Edited</dt>
-  <dd id="commit-lines"></dd>
+    <dt>Time</dt>
+    <dd id="commit-time"></dd>
 
+    <dt>Author</dt>
+    <dd id="commit-author"></dd>
 
-</dl>
+    <dt>Lines Edited</dt>
+    <dd id="commit-lines"></dd>
+  </dl>
 
-
-
-
-
-<script type="module" src="main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
