--- a/meta/index.html
+++ b/meta/index.html
@@ -26,7 +26,14 @@
   <dl class="files"></dl>
 
   <!-- Chart section -->
+  <div id="scrollytelling">
+  <div id="scroll-container">
+    <div id="spacer"></div>
+    <div id="items-container"></div>
+  </div>
+  <!-- our old scatterplot div -->
   <div id="chart"></div>
+</div>
   <p id="selection-count">No commits selected</p>
   <dl id="language-breakdown" class="stats"></dl>
 
