--- a/meta/index.html
+++ b/meta/index.html
@@ -22,20 +22,18 @@
     <time id="selectedTime" style="margin-left: auto;"></time>
   </div>
 
+  <!-- SCROLLYTELLING SECTION -->
+  <div id="scrolly-1">
+    <div id="scatter-story"></div>
+    <div id="scatter-plot">
+      <div id="chart"></div>
+      <p id="selection-count">No commits selected</p>
+      <dl id="language-breakdown" class="stats"></dl>
+    </div>
+  </div>
+
   <!-- File breakdown section -->
   <dl class="files"></dl>
-
-  <!-- Chart section -->
-  <div id="scrollytelling">
-  <div id="scroll-container">
-    <div id="spacer"></div>
-    <div id="items-container"></div>
-  </div>
-  <!-- our old scatterplot div -->
-  <div id="chart"></div>
-</div>
-  <p id="selection-count">No commits selected</p>
-  <dl id="language-breakdown" class="stats"></dl>
 
   <!-- Commit tooltip -->
   <dl id="commit-tooltip" class="info tooltip" hidden>
